Fixed C and F temp links, small CSS edits

--- a/styles.css
+++ b/styles.css
@@ -73,4 +73,10 @@
   .edit-div {
     margin: 0 auto;
   }
+
+  a {
+    text-decoration: none;
+    font-weight: lighter;
+    color:rgb(149, 6, 113);
+  }
   
